--- a/CHANGES
+++ b/CHANGES
@@ -1,2 +1,7 @@
+0.02 (September 06, 2011)
+- Add test comment.
+- Doc improvement.
+- Add examples to doc.
+
 0.01 (July 22, 2011)
 - First version.
