Import of SKIM/Text-DSV-0.03 from CPAN.
gitpan-cpan-distribution: Text-DSV
gitpan-cpan-version:      0.03
gitpan-cpan-path:         SKIM/Text-DSV-0.03.tar.gz
gitpan-cpan-author:       SKIM
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+0.03
+- Test::Pod not usable in Perl lesser then 5.8.0. Fix this.
+
 0.02 (September 06, 2011)
 - Add test comment.
 - Doc improvement.
