--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,8 @@
-0.03
+0.04 (July 16, 2012)
+- Add examples/ directory.
+- Fix Makefile.PL to META 1.4.
+
+0.03 (October 16, 2011)
 - Test::Pod not usable in Perl lesser then 5.8.0. Fix this.
 
 0.02 (September 06, 2011)
