Import of SKIM/Text-DSV-0.05 from CPAN.
gitpan-cpan-distribution: Text-DSV
gitpan-cpan-version:      0.05
gitpan-cpan-path:         SKIM/Text-DSV-0.05.tar.gz
gitpan-cpan-author:       SKIM
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+0.05 (July 17, 2012)
+- Update build system.
+- Update META.yml to right values.
+
 0.04 (July 16, 2012)
 - Add examples/ directory.
 - Fix Makefile.PL to META 1.4.
