--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.07 2013-10-18
+ - Add new tests for multiple escaped characters in input data.
+ - Fix serializing multiple escaped characters in input data.
+
 0.06 2013-09-21
  - Add LICENSE file.
  - Add SIGNATURE file.
