Import of SKIM/Text-DSV-0.08 from CPAN.
gitpan-cpan-distribution: Text-DSV
gitpan-cpan-version:      0.08
gitpan-cpan-path:         SKIM/Text-DSV-0.08.tar.gz
gitpan-cpan-author:       SKIM
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.08 2013-10-21
+ - Add new tests for multiple escaped characters in parsing.
+ - Fix parsing multiple escaped characters.
+
 0.07 2013-10-18
  - Add new tests for multiple escaped characters in input data.
  - Fix serializing multiple escaped characters in input data.
