Import of SKIM/Text-DSV-0.09 from CPAN.
gitpan-cpan-distribution: Text-DSV
gitpan-cpan-version:      0.09
gitpan-cpan-path:         SKIM/Text-DSV-0.09.tar.gz
gitpan-cpan-author:       SKIM
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.09 2013-11-07
+ - Add minimal Perl version.
+
 0.08 2013-10-21
  - Add new tests for multiple escaped characters in parsing.
  - Fix parsing multiple escaped characters.
